Replacing paragraph with labels to better customization

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
     <div class="container">
         <div class="info">
-            <p>Gmail</p>
-            <p>Obrázky</p>
-            <p>etc..</p>
+            <label>Gmail</label>
+            <label>Obrázky</label>
+            <label>etc..</label>
         </div>
         <div class="mainApp">
             <div class="logoPage">
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
             </div>
+            <div class="searchBar">
+                <input id="searchBar" type="text">
+            </div>
             <div class="searchingClass">
                 <form>
-                    <input type="text" name="" id=""><br>
                     <input type="submit" value="Hledat Googlem">
                     <input type="submit" value="Zkusím štěstí"><br>
                     <label for="flanguage">Zkuste Google v jazyce: English</label>
@@ -27,20 +29,21 @@
             </div>
         </div>
         <div class="bottom">
-            <p>Česko</p>
             <div class="about">
-                <p>Reklama</p>
-                <p>Firma</p>
-                <p>O společnosti Google</p>
-                <p>Jak funguje vyhledávání</p>
+                <form>
+                    <label>Česko</label>
+                    <label>Reklama</label>
+                    <label>Firma</label>
+                    <label>O společnosti Google</label>
+                    <label>Jak funguje vyhledávání</label>
+                </form>
             </div>
             <div class="privacyPolicy">
-                <p>Ochrana soukromí</p>
-                <p>Smluvní podmínky</p>
-                <p>Nastavení</p>
+                <label>Ochrana soukromí</label>
+                <label>Smluvní podmínky</label>
+                <label>Nastavení</label>
             </div>
         </div>
     </div>
-    //sdaawd
 </body>
 </html>
