HTML improving buttons, header, main view

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Google</title>
 </head>
 <body>
+    <div class="infoHeader">
+        <label class="">Gmail</label>
+        <label>Obrázky</label>
+        <button class="signInBtn">Přihlásit se</button>
+    </div>
     <div class="container">
-        <div class="info">
-            <label>Gmail</label>
-            <label>Obrázky</label>
-            <label>etc..</label>
-        </div>
         <div class="mainApp">
             <div class="logoPage">
                 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
@@ -22,26 +22,9 @@
             </div>
             <div class="searchingClass">
                 <form>
-                    <input type="submit" value="Hledat Googlem">
-                    <input type="submit" value="Zkusím štěstí"><br>
-                    <label for="flanguage">Zkuste Google v jazyce: English</label>
+                    <button class="buttonSubmit">Hledat Googlem</button>
+                    <button class="buttonSubmit">Zkusím štěstí</button>
                 </form>
-            </div>
-        </div>
-        <div class="bottom">
-            <div class="about">
-                <form>
-                    <label>Česko</label>
-                    <label>Reklama</label>
-                    <label>Firma</label>
-                    <label>O společnosti Google</label>
-                    <label>Jak funguje vyhledávání</label>
-                </form>
-            </div>
-            <div class="privacyPolicy">
-                <label>Ochrana soukromí</label>
-                <label>Smluvní podmínky</label>
-                <label>Nastavení</label>
             </div>
         </div>
     </div>
