Finishing, all done

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Google</title>
 </head>
 <body>
-    <div class="infoHeader">
-        <label class="">Gmail</label>
-        <label>Obrázky</label>
-        <button class="signInBtn">Přihlásit se</button>
+    <div class="header">
+        <label class="headerGmail">Gmail</label>
+        <label class="headerPics">Obrázky</label>
+        <button class="signBtn">Přihlásit se</button>
     </div>
     <div class="container">
         <div class="mainApp">
